data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3457.wast
;; 6. **Br_Table within Nested Loops and Calls**:    - **Test Description**: Construct a scenario where a `br_table` instruction inside nested loops handles jumps to various depths with calls at each potential jump point. Verify that the correct block is exited.    - **Constraint Checked**: Proper jump handling and call execution within nested `br_table`.    - **Relation to Mismanagement of Block Nesting**: Tests handling of control jumps and calls within nested loop structures.

(assert_invalid
  (module
    (func $nested (result i32)
      (loop $L1
        (block $B1
          (loop $L2
            (block $B2
              (br_table $B1 $B2 $L1 $L2 (i32.const 2))
              (call 1)
            )
          )
        )
      )
    )
    (func)
  )
  "type mismatch"
)